<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guest Record"
            android:typeface="monospace"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblFname"
                android:typeface="monospace"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hntUsername"
                android:inputType="textPersonName"
                android:textSize="20dp"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblLname"
                android:typeface="monospace"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hntLname"
                android:inputType="textPersonName"
                android:textSize="20dp"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblGender"
                android:typeface="monospace"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/genOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/genMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radMale"
                    android:typeface="monospace"
                    android:textColor="@color/black"/>
                <RadioButton android:id="@+id/genFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radFemale"
                    android:typeface="monospace"
                    android:textColor="@color/black"/>
                <RadioButton android:id="@+id/genOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radOther"
                    android:typeface="monospace"
                    android:textColor="@color/black"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAddress"
                android:typeface="monospace"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hntAddress"
                android:inputType="textPostalAddress"
                android:textSize="20dp"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblEmail"
                android:typeface="monospace"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hntEmail"
                android:inputType="textEmailAddress"
                android:textSize="20dp"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblContact"
                android:typeface="monospace"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hntContact"
                android:inputType="phone"
                android:textSize="20dp"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblUsername"
                android:typeface="monospace"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hntUsername"
                android:enabled="false"
                android:textSize="20dp"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblPassword"
                android:typeface="monospace"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hntPassword"
                android:inputType="textPassword"
                android:textSize="20dp"
                android:textColor="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblVerified"
                android:typeface="monospace"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/Verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/verYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radVerified"
                    android:typeface="monospace"
                    android:textColor="@color/black"/>
                <RadioButton android:id="@+id/verNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:text="@string/radVerify"
                    android:textColor="@color/black"/>

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/Edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/greenButtonColor"
            android:text="@string/btnEdit"
            android:textSize="20dp"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/Logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/greenButtonColor"
            android:text="@string/btnLogout"
            android:textSize="20dp" />

    </LinearLayout>

</ScrollView>